force-app/main/default/objects/Account_Request__c/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <label>BillingCity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>