force-app/main/default/objects/Account_Request__c/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <label>BillingPostalCode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>