force-app/main/default/objects/Account_Request__c/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <label>BillingState</label>
    <length>40</length>
    <type>Text</type>
</CustomField>