force-app/main/default/objects/Account_Request__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>The Email for the Customer</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>