force-app/main/default/objects/Account_Request__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>Primary Contact LastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>