force-app/main/default/objects/Account_Request__c/fields/PrimaryEmail__c.field-meta.xml
<CustomField>
    <fullName>PrimaryEmail__c</fullName>
    <inlineHelpText>The email of the primary Contact</inlineHelpText>
    <label>Primary Contact Email</label>
    <type>Email</type>
</CustomField>