force-app/main/default/objects/Account_Request__c/fields/PrimaryPhone__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPhone__c</fullName>
    <inlineHelpText>The Phone Number of the primary Contact</inlineHelpText>
    <label>Primary Contact Phone</label>
    <type>Phone</type>
</CustomField>