force-app/main/default/objects/Account_Request__c/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <label>ShippingCountry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India,</fullName>
            </value>
            <value>
                <fullName>USA,</fullName>
            </value>
            <value>
                <fullName>UK,</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>