force-app/main/default/objects/Account_Request__c/fields/ShippingState__c.field-meta.xml
<CustomField>
    <fullName>ShippingState__c</fullName>
    <label>ShippingState</label>
    <length>40</length>
    <type>Text</type>
</CustomField>